# anaya

./: .env.Example  .gitignore  404.html  README.md  docusaurus.config.js  index.html  main.py  markdown-page.html  package.json  pyproject.toml  requirements.txt  sitemap.xml
anaya/: __init__.py  core.py
assets/css/: styles.29a75ee4.css  styles.6840aa2d.css
assets/js/: 17896441.dde648ee.js  1f391b9e.6683d395.js  237.81796e57.js  28a419c8.0dcf32ca.js  393be207.a1c8aefb.js  47347118.e7be7d3a.js  546.a36ba011.js  5e95c892.3e285140.js  9181a06d.0356b09f.js  9181a06d.676b4366.js  972d9d57.5a02a67d.js  972d9d57.80b23490.js  a7456010.ee07adf7.js  a7bd4aaa.8c07a4da.js  a94703ab.91470723.js  aba21aa0.f7ea1fbb.js  c4f5d8e4.779c2c6a.js  c4f5d8e4.ecee0695.js  fa4d91bf.0213bd6d.js  fa4d91bf.94cc9809.js  main.6b15e6fb.js  main.d75b7e7f.js  runtime~main.113c4be4.js  runtime~main.4c0dcf7e.js
docs/: installation.html  installation.mdx  introduction.html  introduction.mdx  techstack.html  techstack.mdx  versions.html
docs/versions/: index.mdx
src/components/HomepageFeatures/: index.js
src/css/: custom.css
src/pages/: index.js  index.module.css
