[tool.poetry]
name = "anaya"
version = "0.1.0"
description = "Anaya is a Content Engine that specializes in analyzing and comparing multiple PDF documents. It uses Retrieval Augmented Generation (RAG) techniques to effectively retrieve, assess, and generate insights from the documents."
authors = ["Shreyas Waghmode"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
streamlit = "^1.36.0"
langchain-community = "^0.2.6"
langchain = "^0.2.6"
python-dotenv = "^1.0.1"
ollama = "^0.2.1"
pdfplumber = "^0.11.1"
unstructured = {extras = ["pdf"], version = "^0.14.9"}
psutil = "^6.0.0"
chromadb = "^0.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
